docs: update CLAUDE.md for Java 11 target
Co-Authored-By: Claude Opus 4.7 <noreply@anthropic.com>